k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fastapi-app
  labels:
    name: fastapi-app
